# HPCA

./: media.train.sentences  media.train.tagsequences
hpca-0.9/: Makefile.am  Makefile.in  configure  configure.ac
hpca-0.9/src/: Fenetre.cpp  Fenetre.h  LexiqueContext.cpp  LexiqueContext.h  LexiqueMot.cpp  LexiqueMot.h  Makefile.am  Makefile.in  PseudoMatrice.cpp  PseudoMatrice.h  Traitement.cpp  Traitement.h  main.cpp
